// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`msx-end2end t0 1`] = `
"{
    \\"problems\\": [],
    \\"templates\\": {
        \\"t01\\": {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 67,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 55,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 40,
                            \\"endIndex\\": 49,
                            \\"data\\": \\"Hello MXT!\\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 56,
                    \\"endIndex\\": 56,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    },
    \\"scripts\\": [],
    \\"components\\": {
        \\"t01\\": {
            \\"parts\\": {},
            \\"importParts\\": {},
            \\"partset\\": {
                \\"p0\\": {
                    \\"id\\": \\"p0\\",
                    \\"elements\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 30,
                            \\"endIndex\\": 34,
                            \\"data\\": \\"\\\\n    \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 35,
                            \\"endIndex\\": 55,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 40,
                                    \\"endIndex\\": 49,
                                    \\"data\\": \\"Hello MXT!\\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 56,
                            \\"endIndex\\": 56,
                            \\"data\\": \\"\\\\n\\"
                        }
                    ],
                    \\"attachTo\\": []
                }
            },
            \\"id\\": \\"t01\\",
            \\"rootPart\\": {
                \\"partId\\": \\"p0\\"
            }
        }
    },
    \\"initStatements\\": [],
    \\"componentStatements\\": [],
    \\"imports\\": [],
    \\"content\\": \\"<template id=\\\\\\"t01\\\\\\" type=\\\\\\"mxt\\\\\\">\\\\n    <div>Hello MXT!</div>\\\\n</template>\\",
    \\"dom\\": [
        {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 67,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 55,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 40,
                            \\"endIndex\\": 49,
                            \\"data\\": \\"Hello MXT!\\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 56,
                    \\"endIndex\\": 56,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    ]
}"
`;

exports[`msx-end2end t1 1`] = `
"{
    \\"problems\\": [],
    \\"templates\\": {
        \\"t01\\": {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 94,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 82,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 67,
                            \\"endIndex\\": 76,
                            \\"data\\": \\"Hello MXT!\\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {
                        \\"id\\": \\"tagid_1\\"
                    }
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 83,
                    \\"endIndex\\": 83,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    },
    \\"scripts\\": [],
    \\"components\\": {
        \\"t01\\": {
            \\"parts\\": {},
            \\"importParts\\": {},
            \\"partset\\": {
                \\"p1\\": {
                    \\"id\\": \\"p1\\",
                    \\"elements\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 30,
                            \\"endIndex\\": 34,
                            \\"data\\": \\"\\\\n    \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 35,
                            \\"endIndex\\": 82,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 67,
                                    \\"endIndex\\": 76,
                                    \\"data\\": \\"Hello MXT!\\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_1\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 83,
                            \\"endIndex\\": 83,
                            \\"data\\": \\"\\\\n\\"
                        }
                    ],
                    \\"attachTo\\": [
                        {
                            \\"attributes\\": {
                                \\"style\\": {
                                    \\"content\\": \\"color: \${newColor}\\",
                                    \\"externalReferences\\": [
                                        \\"newColor\\"
                                    ],
                                    \\"tokens\\": [
                                        {
                                            \\"start\\": 7,
                                            \\"end\\": 18,
                                            \\"content\\": \\"newColor\\",
                                            \\"token\\": \\"\${newColor}\\"
                                        }
                                    ],
                                    \\"attributeName\\": \\"style\\"
                                }
                            },
                            \\"events\\": {},
                            \\"id\\": \\"tagid_1\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": []
                        }
                    ]
                }
            },
            \\"id\\": \\"t01\\",
            \\"rootPart\\": {
                \\"partId\\": \\"p1\\"
            }
        }
    },
    \\"initStatements\\": [],
    \\"componentStatements\\": [],
    \\"imports\\": [],
    \\"content\\": \\"<template id=\\\\\\"t01\\\\\\" type=\\\\\\"mxt\\\\\\">\\\\n    <div style=\\\\\\"color: \${newColor}\\\\\\">Hello MXT!</div>\\\\n</template>\\",
    \\"dom\\": [
        {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 94,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 82,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 67,
                            \\"endIndex\\": 76,
                            \\"data\\": \\"Hello MXT!\\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {
                        \\"id\\": \\"tagid_1\\"
                    }
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 83,
                    \\"endIndex\\": 83,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    ]
}"
`;

exports[`msx-end2end t2 1`] = `
"{
    \\"problems\\": [],
    \\"templates\\": {
        \\"t01\\": {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 177,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 165,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 141,
                            \\"endIndex\\": 159,
                            \\"data\\": \\"\\\\n        Hello MXT!\\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {
                        \\"id\\": \\"tagid_2\\"
                    }
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 166,
                    \\"endIndex\\": 166,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    },
    \\"scripts\\": [],
    \\"components\\": {
        \\"t01\\": {
            \\"parts\\": {},
            \\"importParts\\": {},
            \\"partset\\": {
                \\"p2\\": {
                    \\"id\\": \\"p2\\",
                    \\"elements\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 30,
                            \\"endIndex\\": 34,
                            \\"data\\": \\"\\\\n    \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 35,
                            \\"endIndex\\": 165,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 141,
                                    \\"endIndex\\": 159,
                                    \\"data\\": \\"\\\\n        Hello MXT!\\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_2\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 166,
                            \\"endIndex\\": 166,
                            \\"data\\": \\"\\\\n\\"
                        }
                    ],
                    \\"attachTo\\": [
                        {
                            \\"attributes\\": {
                                \\"style\\": {
                                    \\"content\\": \\"color: \${newColor}\\",
                                    \\"externalReferences\\": [
                                        \\"newColor\\"
                                    ],
                                    \\"tokens\\": [
                                        {
                                            \\"start\\": 7,
                                            \\"end\\": 18,
                                            \\"content\\": \\"newColor\\",
                                            \\"token\\": \\"\${newColor}\\"
                                        }
                                    ],
                                    \\"attributeName\\": \\"style\\"
                                }
                            },
                            \\"events\\": {
                                \\"click\\": {
                                    \\"name\\": \\"click\\",
                                    \\"handler\\": \\"doClick\\",
                                    \\"preventDefault\\": true
                                },
                                \\"zoom\\": {
                                    \\"name\\": \\"zoom\\",
                                    \\"handler\\": \\"something.zoom\\",
                                    \\"externalReferences\\": [
                                        \\"something\\"
                                    ]
                                }
                            },
                            \\"id\\": \\"tagid_2\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": []
                        }
                    ]
                }
            },
            \\"id\\": \\"t01\\",
            \\"rootPart\\": {
                \\"partId\\": \\"p2\\"
            }
        }
    },
    \\"initStatements\\": [],
    \\"componentStatements\\": [],
    \\"imports\\": [],
    \\"content\\": \\"<template id=\\\\\\"t01\\\\\\" type=\\\\\\"mxt\\\\\\">\\\\n    <div style=\\\\\\"color: \${newColor}\\\\\\" mxt.click=\\\\\\"doClick\\\\\\" mxt.zoom=\\\\\\"\${something.zoom}\\\\\\" mxt.click.preventDefault>\\\\n        Hello MXT!</div>\\\\n</template>\\",
    \\"dom\\": [
        {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 177,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 165,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 141,
                            \\"endIndex\\": 159,
                            \\"data\\": \\"\\\\n        Hello MXT!\\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {
                        \\"id\\": \\"tagid_2\\"
                    }
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 166,
                    \\"endIndex\\": 166,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    ]
}"
`;

exports[`msx-end2end t3 1`] = `
"{
    \\"problems\\": [],
    \\"templates\\": {
        \\"t01\\": {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 273,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 77,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 40,
                            \\"endIndex\\": 55,
                            \\"data\\": \\"\\\\n        Hello \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 55,
                            \\"endIndex\\": 62,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_3\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 62,
                            \\"endIndex\\": 72,
                            \\"data\\": \\" MXT!\\\\n    \\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 78,
                    \\"endIndex\\": 82,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 83,
                    \\"endIndex\\": 193,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 88,
                            \\"endIndex\\": 100,
                            \\"data\\": \\"\\\\n        One\\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 100,
                            \\"endIndex\\": 106,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_4\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 106,
                            \\"endIndex\\": 118,
                            \\"data\\": \\"enO\\\\n        \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 118,
                            \\"endIndex\\": 131,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 123,
                                    \\"endIndex\\": 125,
                                    \\"data\\": \\"two\\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 132,
                            \\"endIndex\\": 146,
                            \\"data\\": \\"\\\\n        Three\\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 146,
                            \\"endIndex\\": 154,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_6\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 154,
                            \\"endIndex\\": 172,
                            \\"data\\": \\"eerhT\\\\n        Four\\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 172,
                            \\"endIndex\\": 179,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_5\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 179,
                            \\"endIndex\\": 188,
                            \\"data\\": \\"ruoF\\\\n    \\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 194,
                    \\"endIndex\\": 198,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 199,
                    \\"endIndex\\": 221,
                    \\"children\\": [
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 204,
                            \\"endIndex\\": 216,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_7\\"
                            }
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 222,
                    \\"endIndex\\": 226,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 227,
                    \\"endIndex\\": 261,
                    \\"children\\": [
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 232,
                            \\"endIndex\\": 244,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_9\\"
                            }
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 244,
                            \\"endIndex\\": 256,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_8\\"
                            }
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 262,
                    \\"endIndex\\": 262,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    },
    \\"scripts\\": [],
    \\"components\\": {
        \\"t01\\": {
            \\"parts\\": {},
            \\"importParts\\": {},
            \\"partset\\": {
                \\"p3\\": {
                    \\"id\\": \\"p3\\",
                    \\"elements\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 30,
                            \\"endIndex\\": 34,
                            \\"data\\": \\"\\\\n    \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 35,
                            \\"endIndex\\": 77,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 40,
                                    \\"endIndex\\": 55,
                                    \\"data\\": \\"\\\\n        Hello \\"
                                },
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 55,
                                    \\"endIndex\\": 62,
                                    \\"children\\": [],
                                    \\"name\\": \\"span\\",
                                    \\"attribs\\": {
                                        \\"id\\": \\"tagid_3\\"
                                    }
                                },
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 62,
                                    \\"endIndex\\": 72,
                                    \\"data\\": \\" MXT!\\\\n    \\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 78,
                            \\"endIndex\\": 82,
                            \\"data\\": \\"\\\\n    \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 83,
                            \\"endIndex\\": 193,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 88,
                                    \\"endIndex\\": 100,
                                    \\"data\\": \\"\\\\n        One\\"
                                },
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 100,
                                    \\"endIndex\\": 106,
                                    \\"children\\": [],
                                    \\"name\\": \\"span\\",
                                    \\"attribs\\": {
                                        \\"id\\": \\"tagid_4\\"
                                    }
                                },
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 106,
                                    \\"endIndex\\": 118,
                                    \\"data\\": \\"enO\\\\n        \\"
                                },
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 118,
                                    \\"endIndex\\": 131,
                                    \\"children\\": [
                                        {
                                            \\"type\\": \\"text\\",
                                            \\"startIndex\\": 123,
                                            \\"endIndex\\": 125,
                                            \\"data\\": \\"two\\"
                                        }
                                    ],
                                    \\"name\\": \\"div\\",
                                    \\"attribs\\": {}
                                },
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 132,
                                    \\"endIndex\\": 146,
                                    \\"data\\": \\"\\\\n        Three\\"
                                },
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 146,
                                    \\"endIndex\\": 154,
                                    \\"children\\": [],
                                    \\"name\\": \\"span\\",
                                    \\"attribs\\": {
                                        \\"id\\": \\"tagid_6\\"
                                    }
                                },
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 154,
                                    \\"endIndex\\": 172,
                                    \\"data\\": \\"eerhT\\\\n        Four\\"
                                },
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 172,
                                    \\"endIndex\\": 179,
                                    \\"children\\": [],
                                    \\"name\\": \\"span\\",
                                    \\"attribs\\": {
                                        \\"id\\": \\"tagid_5\\"
                                    }
                                },
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 179,
                                    \\"endIndex\\": 188,
                                    \\"data\\": \\"ruoF\\\\n    \\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 194,
                            \\"endIndex\\": 198,
                            \\"data\\": \\"\\\\n    \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 199,
                            \\"endIndex\\": 221,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 204,
                                    \\"endIndex\\": 216,
                                    \\"children\\": [],
                                    \\"name\\": \\"span\\",
                                    \\"attribs\\": {
                                        \\"id\\": \\"tagid_7\\"
                                    }
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 222,
                            \\"endIndex\\": 226,
                            \\"data\\": \\"\\\\n    \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 227,
                            \\"endIndex\\": 261,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 232,
                                    \\"endIndex\\": 244,
                                    \\"children\\": [],
                                    \\"name\\": \\"span\\",
                                    \\"attribs\\": {
                                        \\"id\\": \\"tagid_9\\"
                                    }
                                },
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 244,
                                    \\"endIndex\\": 256,
                                    \\"children\\": [],
                                    \\"name\\": \\"span\\",
                                    \\"attribs\\": {
                                        \\"id\\": \\"tagid_8\\"
                                    }
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 262,
                            \\"endIndex\\": 262,
                            \\"data\\": \\"\\\\n\\"
                        }
                    ],
                    \\"attachTo\\": [
                        {
                            \\"attributes\\": {},
                            \\"events\\": {},
                            \\"id\\": \\"tagid_3\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": [],
                            \\"value\\": {
                                \\"content\\": \\"info\\",
                                \\"externalReferences\\": [
                                    \\"info\\"
                                ],
                                \\"tokens\\": [
                                    {
                                        \\"start\\": 15,
                                        \\"end\\": 22,
                                        \\"content\\": \\"info\\",
                                        \\"token\\": \\"\${info}\\"
                                    }
                                ]
                            }
                        },
                        {
                            \\"attributes\\": {},
                            \\"events\\": {},
                            \\"id\\": \\"tagid_4\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": [],
                            \\"value\\": {
                                \\"content\\": \\"one\\",
                                \\"externalReferences\\": [
                                    \\"one\\"
                                ],
                                \\"tokens\\": [
                                    {
                                        \\"start\\": 12,
                                        \\"end\\": 18,
                                        \\"content\\": \\"one\\",
                                        \\"token\\": \\"\${one}\\"
                                    }
                                ]
                            }
                        },
                        {
                            \\"attributes\\": {},
                            \\"events\\": {},
                            \\"id\\": \\"tagid_5\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": [],
                            \\"value\\": {
                                \\"content\\": \\"four\\",
                                \\"externalReferences\\": [
                                    \\"three\\",
                                    \\"four\\"
                                ],
                                \\"tokens\\": [
                                    {
                                        \\"start\\": 40,
                                        \\"end\\": 47,
                                        \\"content\\": \\"four\\",
                                        \\"token\\": \\"\${four}\\"
                                    }
                                ]
                            }
                        },
                        {
                            \\"attributes\\": {},
                            \\"events\\": {},
                            \\"id\\": \\"tagid_6\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": [],
                            \\"value\\": {
                                \\"content\\": \\"three\\",
                                \\"externalReferences\\": [
                                    \\"three\\",
                                    \\"four\\"
                                ],
                                \\"tokens\\": [
                                    {
                                        \\"start\\": 14,
                                        \\"end\\": 22,
                                        \\"content\\": \\"three\\",
                                        \\"token\\": \\"\${three}\\"
                                    }
                                ]
                            }
                        },
                        {
                            \\"attributes\\": {},
                            \\"events\\": {},
                            \\"id\\": \\"tagid_7\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": [],
                            \\"value\\": {
                                \\"content\\": \\"justtoken\\",
                                \\"externalReferences\\": [
                                    \\"justtoken\\"
                                ],
                                \\"tokens\\": [
                                    {
                                        \\"start\\": 0,
                                        \\"end\\": 12,
                                        \\"content\\": \\"justtoken\\",
                                        \\"token\\": \\"\${justtoken}\\"
                                    }
                                ]
                            }
                        },
                        {
                            \\"attributes\\": {},
                            \\"events\\": {},
                            \\"id\\": \\"tagid_8\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": [],
                            \\"value\\": {
                                \\"content\\": \\"token_two\\",
                                \\"externalReferences\\": [
                                    \\"token_one\\",
                                    \\"token_two\\"
                                ],
                                \\"tokens\\": [
                                    {
                                        \\"start\\": 12,
                                        \\"end\\": 24,
                                        \\"content\\": \\"token_two\\",
                                        \\"token\\": \\"\${token_two}\\"
                                    }
                                ]
                            }
                        },
                        {
                            \\"attributes\\": {},
                            \\"events\\": {},
                            \\"id\\": \\"tagid_9\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": [],
                            \\"value\\": {
                                \\"content\\": \\"token_one\\",
                                \\"externalReferences\\": [
                                    \\"token_one\\",
                                    \\"token_two\\"
                                ],
                                \\"tokens\\": [
                                    {
                                        \\"start\\": 0,
                                        \\"end\\": 12,
                                        \\"content\\": \\"token_one\\",
                                        \\"token\\": \\"\${token_one}\\"
                                    }
                                ]
                            }
                        }
                    ]
                }
            },
            \\"id\\": \\"t01\\",
            \\"rootPart\\": {
                \\"partId\\": \\"p3\\"
            }
        }
    },
    \\"initStatements\\": [],
    \\"componentStatements\\": [],
    \\"imports\\": [],
    \\"content\\": \\"<template id=\\\\\\"t01\\\\\\" type=\\\\\\"mxt\\\\\\">\\\\n    <div>\\\\n        Hello \${info} MXT!\\\\n    </div>\\\\n    <div>\\\\n        One\${one}enO\\\\n        <div>two</div>\\\\n        Three\${three}eerhT\\\\n        Four\${four}ruoF\\\\n    </div>\\\\n    <div>\${justtoken}</div>\\\\n    <div>\${token_one}\${token_two}</div>\\\\n</template>\\",
    \\"dom\\": [
        {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 273,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 77,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 40,
                            \\"endIndex\\": 55,
                            \\"data\\": \\"\\\\n        Hello \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 55,
                            \\"endIndex\\": 62,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_3\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 62,
                            \\"endIndex\\": 72,
                            \\"data\\": \\" MXT!\\\\n    \\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 78,
                    \\"endIndex\\": 82,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 83,
                    \\"endIndex\\": 193,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 88,
                            \\"endIndex\\": 100,
                            \\"data\\": \\"\\\\n        One\\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 100,
                            \\"endIndex\\": 106,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_4\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 106,
                            \\"endIndex\\": 118,
                            \\"data\\": \\"enO\\\\n        \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 118,
                            \\"endIndex\\": 131,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 123,
                                    \\"endIndex\\": 125,
                                    \\"data\\": \\"two\\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 132,
                            \\"endIndex\\": 146,
                            \\"data\\": \\"\\\\n        Three\\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 146,
                            \\"endIndex\\": 154,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_6\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 154,
                            \\"endIndex\\": 172,
                            \\"data\\": \\"eerhT\\\\n        Four\\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 172,
                            \\"endIndex\\": 179,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_5\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 179,
                            \\"endIndex\\": 188,
                            \\"data\\": \\"ruoF\\\\n    \\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 194,
                    \\"endIndex\\": 198,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 199,
                    \\"endIndex\\": 221,
                    \\"children\\": [
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 204,
                            \\"endIndex\\": 216,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_7\\"
                            }
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 222,
                    \\"endIndex\\": 226,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 227,
                    \\"endIndex\\": 261,
                    \\"children\\": [
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 232,
                            \\"endIndex\\": 244,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_9\\"
                            }
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 244,
                            \\"endIndex\\": 256,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_8\\"
                            }
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 262,
                    \\"endIndex\\": 262,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    ]
}"
`;

exports[`msx-end2end t4 1`] = `
"{
    \\"problems\\": [],
    \\"templates\\": {
        \\"t01\\": {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 265,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 134,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 40,
                            \\"endIndex\\": 48,
                            \\"data\\": \\"\\\\n        \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 49,
                            \\"endIndex\\": 123,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_10\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 124,
                            \\"endIndex\\": 128,
                            \\"data\\": \\"\\\\n    \\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 135,
                    \\"endIndex\\": 139,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 140,
                    \\"endIndex\\": 253,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 145,
                            \\"endIndex\\": 153,
                            \\"data\\": \\"\\\\n        \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 154,
                            \\"endIndex\\": 242,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_11\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 243,
                            \\"endIndex\\": 247,
                            \\"data\\": \\"\\\\n    \\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 254,
                    \\"endIndex\\": 254,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    },
    \\"scripts\\": [],
    \\"components\\": {
        \\"t01\\": {
            \\"parts\\": {},
            \\"importParts\\": {},
            \\"partset\\": {
                \\"p4\\": {
                    \\"id\\": \\"p4\\",
                    \\"elements\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 76,
                            \\"endIndex\\": 88,
                            \\"data\\": \\"\\\\n            \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 89,
                            \\"endIndex\\": 105,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 94,
                                    \\"endIndex\\": 99,
                                    \\"data\\": \\"if foo\\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 106,
                            \\"endIndex\\": 114,
                            \\"data\\": \\"\\\\n        \\"
                        }
                    ],
                    \\"attachTo\\": []
                },
                \\"p5\\": {
                    \\"id\\": \\"p5\\",
                    \\"sequence\\": [
                        {
                            \\"partId\\": \\"p4\\",
                            \\"when\\": {
                                \\"content\\": \\"\${foo}\\",
                                \\"externalReferences\\": [
                                    \\"foo\\"
                                ],
                                \\"tokens\\": [
                                    {
                                        \\"start\\": 0,
                                        \\"end\\": 6,
                                        \\"content\\": \\"foo\\",
                                        \\"token\\": \\"\${foo}\\"
                                    }
                                ]
                            }
                        }
                    ]
                },
                \\"p6\\": {
                    \\"id\\": \\"p6\\",
                    \\"elements\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 195,
                            \\"endIndex\\": 207,
                            \\"data\\": \\"\\\\n            \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 208,
                            \\"endIndex\\": 224,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 213,
                                    \\"endIndex\\": 218,
                                    \\"data\\": \\"if bar\\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 225,
                            \\"endIndex\\": 233,
                            \\"data\\": \\"\\\\n        \\"
                        }
                    ],
                    \\"attachTo\\": []
                },
                \\"p7\\": {
                    \\"id\\": \\"p7\\",
                    \\"sequence\\": [
                        {
                            \\"partId\\": \\"p6\\",
                            \\"when\\": {
                                \\"content\\": \\"\${bar}\\",
                                \\"externalReferences\\": [
                                    \\"bar\\"
                                ],
                                \\"tokens\\": [
                                    {
                                        \\"start\\": 0,
                                        \\"end\\": 6,
                                        \\"content\\": \\"bar\\",
                                        \\"token\\": \\"\${bar}\\"
                                    }
                                ]
                            }
                        }
                    ]
                },
                \\"p8\\": {
                    \\"id\\": \\"p8\\",
                    \\"elements\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 30,
                            \\"endIndex\\": 34,
                            \\"data\\": \\"\\\\n    \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 35,
                            \\"endIndex\\": 134,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 40,
                                    \\"endIndex\\": 48,
                                    \\"data\\": \\"\\\\n        \\"
                                },
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 49,
                                    \\"endIndex\\": 123,
                                    \\"children\\": [],
                                    \\"name\\": \\"span\\",
                                    \\"attribs\\": {
                                        \\"id\\": \\"tagid_10\\"
                                    }
                                },
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 124,
                                    \\"endIndex\\": 128,
                                    \\"data\\": \\"\\\\n    \\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 135,
                            \\"endIndex\\": 139,
                            \\"data\\": \\"\\\\n    \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 140,
                            \\"endIndex\\": 253,
                            \\"children\\": [
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 145,
                                    \\"endIndex\\": 153,
                                    \\"data\\": \\"\\\\n        \\"
                                },
                                {
                                    \\"type\\": \\"tag\\",
                                    \\"startIndex\\": 154,
                                    \\"endIndex\\": 242,
                                    \\"children\\": [],
                                    \\"name\\": \\"span\\",
                                    \\"attribs\\": {
                                        \\"id\\": \\"tagid_11\\"
                                    }
                                },
                                {
                                    \\"type\\": \\"text\\",
                                    \\"startIndex\\": 243,
                                    \\"endIndex\\": 247,
                                    \\"data\\": \\"\\\\n    \\"
                                }
                            ],
                            \\"name\\": \\"div\\",
                            \\"attribs\\": {}
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 254,
                            \\"endIndex\\": 254,
                            \\"data\\": \\"\\\\n\\"
                        }
                    ],
                    \\"attachTo\\": [
                        {
                            \\"attributes\\": {},
                            \\"events\\": {},
                            \\"id\\": \\"tagid_10\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": [
                                {
                                    \\"partId\\": \\"p5\\"
                                }
                            ]
                        },
                        {
                            \\"attributes\\": {},
                            \\"events\\": {},
                            \\"id\\": \\"tagid_11\\",
                            \\"originalId\\": \\"\\",
                            \\"embeddedParts\\": [
                                {
                                    \\"partId\\": \\"p7\\",
                                    \\"dc\\": {
                                        \\"content\\": \\"foobar\\",
                                        \\"externalReferences\\": []
                                    }
                                }
                            ]
                        }
                    ]
                }
            },
            \\"id\\": \\"t01\\",
            \\"rootPart\\": {
                \\"partId\\": \\"p8\\"
            }
        }
    },
    \\"initStatements\\": [],
    \\"componentStatements\\": [],
    \\"imports\\": [],
    \\"content\\": \\"<template id=\\\\\\"t01\\\\\\" type=\\\\\\"mxt\\\\\\">\\\\n    <div>\\\\n        <mxt.if condition=\\\\\\"\${foo}\\\\\\">\\\\n            <div>if foo</div>\\\\n        </mxt.if>\\\\n    </div>\\\\n    <div>\\\\n        <mxt.if condition=\\\\\\"\${bar}\\\\\\" with=\\\\\\"foobar\\\\\\">\\\\n            <div>if bar</div>\\\\n        </mxt.if>\\\\n    </div>\\\\n</template>\\",
    \\"dom\\": [
        {
            \\"type\\": \\"tag\\",
            \\"startIndex\\": 0,
            \\"endIndex\\": 265,
            \\"children\\": [
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 30,
                    \\"endIndex\\": 34,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 35,
                    \\"endIndex\\": 134,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 40,
                            \\"endIndex\\": 48,
                            \\"data\\": \\"\\\\n        \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 49,
                            \\"endIndex\\": 123,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_10\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 124,
                            \\"endIndex\\": 128,
                            \\"data\\": \\"\\\\n    \\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 135,
                    \\"endIndex\\": 139,
                    \\"data\\": \\"\\\\n    \\"
                },
                {
                    \\"type\\": \\"tag\\",
                    \\"startIndex\\": 140,
                    \\"endIndex\\": 253,
                    \\"children\\": [
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 145,
                            \\"endIndex\\": 153,
                            \\"data\\": \\"\\\\n        \\"
                        },
                        {
                            \\"type\\": \\"tag\\",
                            \\"startIndex\\": 154,
                            \\"endIndex\\": 242,
                            \\"children\\": [],
                            \\"name\\": \\"span\\",
                            \\"attribs\\": {
                                \\"id\\": \\"tagid_11\\"
                            }
                        },
                        {
                            \\"type\\": \\"text\\",
                            \\"startIndex\\": 243,
                            \\"endIndex\\": 247,
                            \\"data\\": \\"\\\\n    \\"
                        }
                    ],
                    \\"name\\": \\"div\\",
                    \\"attribs\\": {}
                },
                {
                    \\"type\\": \\"text\\",
                    \\"startIndex\\": 254,
                    \\"endIndex\\": 254,
                    \\"data\\": \\"\\\\n\\"
                }
            ],
            \\"name\\": \\"template\\",
            \\"attribs\\": {
                \\"id\\": \\"t01\\",
                \\"type\\": \\"mxt\\"
            }
        }
    ]
}"
`;
